--- a/ilkproje/static/style.css
+++ b/ilkproje/static/style.css
@@ -14,6 +14,17 @@
     letter-spacing: -1px;
     font-weight: bold;
   }
+
+  .kayıt-button{
+
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #000;
+    font-family: "TTNormsPro-Medium";
+    opacity: 1;
+
+
+  }
   .custom-button:hover {
     background-color: #ff5d5d;
   }
@@ -43,10 +54,14 @@
     border: 1px solid #cccccc;
     outline: none;
   }
+ 
   
   .custom-orange-link{
     color: #5f545f;
     transition: 0.13s color ease-in;
+  }
+  .unut{
+    color:black;
   }
   .custom-orange-link:hover
   {
@@ -87,6 +102,14 @@
     text-decoration: none;
     display: block;
   
+  }
+  .altsatır{
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 18px;
+
+
+
   }
   
   .dropdown:hover  ~ .dropdown-content {
